<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IotController</string>
    <string name="app_name_light">灯光控制</string>
    <string name="app_name_sensor">室内湿温</string>
    <string name="app_name_ir">家电控制</string>
    <string name="app_name_curtain">窗帘控制</string>
    <string name="app_name_dimmer">调光控制</string>
    <string name="app_name_power">能耗统计</string>
    <string name="device_config">Device Configuration</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="gateway_ip">Gateway IP Address</string>
    <string name="loopback_ip">127.0.0.1</string>
    <string name="encryption_key">Encryption Key</string>
    <string name="device_name">Device Name</string>
    <string name="cc3000">CC3000</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="device_config_ok">Device configure successful!</string>
    <string name="command_config">Command Config</string>
    <string name="command">Command</string>
    <string name="command_type">Type</string>
    <string name="local_broadcast">Local Broadcast</string>
    <string name="local_peer_to_peer">Local Peer to Peer</string>
    <string name="remote_server">Remote Server</string>
    <string name="unknown_type">Unknown Type</string>
    <string name="device_list">Device List</string>
    <string name="no_device">No Device</string>
    <string name="exit_alert_on_config">Device configure is in progress, exit now?</string>
    <string name="find_device">Finding Device...</string>
    <string name="send_data_ok">Successfully sent to %s</string>
    <string name="send_data_error">Failed to send to %s</string>
    <string name="send_to_server_ok">Successfully sent %s to server</string>
    <string name="device_not_register">Device %s not register</string>
    <string name="server_full">Server is full now</string>
    <string name="command_already_taken">Command has already been taken</string>
    <string name="received_command_result">Received COMMAND: %1$s\nRESULT: %2$s</string>
    <string name="sent_command_result">Sent COMMAND: %1$s\nRESULT: %2$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <!-- light & sensor control -->
    <string name="theme_list">情景控制</string>
    <string name="light_list">设备列表</string>
    <string name="temperature">室温</string>
    <string name="humidity">湿度</string>
    <string name="fan">风扇</string>
    <string name="light">灯光</string>
    <string name="formol">甲醛含量</string>
    <string name="all_on">全开</string>
    <string name="all_off">全关</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="porch">场景一</string>
    <string name="dining_room">场景二</string>
    <string name="theater">场景三</string>
    <string name="bathroom">场景四</string>
    <string name="bedroom">场景五</string>
    <string name="custom">自定义</string>
    <string name="door_light">进门灯</string>
    <string name="reading_room_light">书房灯</string>
    <string name="porch_light">灯一</string>
    <string name="dining_room_light">灯二</string>
    <string name="living_room_main_light">灯三</string>
    <string name="living_room_surround_light">插座一</string>
    <string name="bathroom_light">插座二</string>
    <string name="master_bedroom_light">插座三</string>
    <string name="secondary_bedroom_light">插座四</string>
    <string name="enter_study_mode">进入学习模式</string>
    <string name="exit_study_mode">退出学习模式</string>
    <string name="studying">正在学习指令...</string>
    <string name="study_success">学习成功！</string>
    <string name="study_failure">学习失败！</string>
    <string name="study_timeout">学习超时！</string>
    <string name="study_send_success">发送指令成功！</string>
    <string name="study_send_failure">发送指令失败！</string>
    <string name="curtain_open_duration">开窗帘时间</string>
    <string name="curtain_close_duration">关窗帘时间</string>
    <string name="curtain_duration_prompt">0~65535秒</string>
    <string name="duration_too_large">时间范围为0~65535秒！</string>
    <string name="illegal_character">非法字符！</string>
    <string name="setup">设置</string>
    <string name="setup_x_success">设置%s成功！</string>
    <string name="stop_curtain_now">急停</string>
    <string name="opening_curtain">正在开窗帘...</string>
    <string name="closing_curtain">正在关窗帘...</string>
    <string name="stopping_curtain">正在急停窗帘...</string>
    <string name="read">重新读取</string>
    <string name="current_power_value">当前电度值：%s</string>
    <string name="dimmer_progress">当前亮度等级</string>
    <string name="dimmer_increase">亮度+</string>
    <string name="dimmer_decrease">亮度-</string>

</resources>