<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/dimmer_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/logo_margin_h"
        android:layout_marginTop="@dimen/logo_margin_v"
        android:background="@drawable/logo"
        android:focusable="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dimmer_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/logo_margin_h"
        android:layout_marginRight="@dimen/logo_margin_h"
        android:layout_marginTop="@dimen/light_body_margin_t"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name_dimmer"
            android:textColor="@android:color/white"
            android:textSize="24dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/light_body_margin_t"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/dimmer_progress"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <ProgressBar
                android:id="@+id/dimmer_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="10"
                android:focusable="false"
                android:max="10"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/light_body_margin_t"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/dimmer_decrease"
                android:layout_width="@dimen/fan_ico_width"
                android:layout_height="@dimen/fan_ico_height"
                android:background="@drawable/fan_bg"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/dimmer_decrease"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/dimmer_switcher"
                android:layout_width="@dimen/fan_ico_width"
                android:layout_height="@dimen/fan_ico_height"
                android:background="@drawable/fan_bg"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/off"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/dimmer_increase"
                android:layout_width="@dimen/fan_ico_width"
                android:layout_height="@dimen/fan_ico_height"
                android:layout_marginLeft="20dp"
                android:background="@drawable/fan_bg"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/dimmer_increase"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>