<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >

    <RelativeLayout style="@style/TopbarLayout" >

        <TextView
            style="@style/TopbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/device_config" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/config_info_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/config_margin"
        android:background="@drawable/config_info_bg"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/ConfigLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_ssid_label"
                style="@style/ConfigText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/ssid" />

            <EditText
                android:id="@+id/config_ssid"
                style="@style/ConfigText.Content"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/ssid"
                android:maxLength="@integer/ssid_max_length" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bg" />

        <LinearLayout
            style="@style/ConfigLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_password_label"
                style="@style/ConfigText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/config_password"
                style="@style/ConfigText.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="meiyoumima" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bg" />

        <LinearLayout
            style="@style/ConfigLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_gateway_label"
                style="@style/ConfigText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/gateway_ip" />

            <TextView
                android:id="@+id/config_gateway"
                style="@style/ConfigText.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/loopback_ip" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bg" />

        <LinearLayout
            style="@style/ConfigLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_key_label"
                style="@style/ConfigText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/encryption_key" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/config_key"
                    style="@style/ConfigText.Content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/config_key_selection"
                    android:hint="@string/encryption_key"
                    android:imeOptions="actionNext"
                    android:maxLength="@integer/encryption_key_max_length"
                    android:text="smartconfigAES16" />

                <CheckBox
                    android:id="@id/config_key_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true" />
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/divider_bg" />

        <LinearLayout
            style="@style/ConfigLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/config_padding"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/config_device_name_label"
                style="@style/ConfigText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/device_name" />

            <EditText
                android:id="@+id/config_device_name"
                style="@style/ConfigText.Content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:hint="@string/device_name"
                android:imeOptions="actionDone"
                android:text="@string/cc3000" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/config_margin" >

        <ImageButton
            android:id="@+id/config_start_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_bg"
            android:src="@drawable/config_btn" />

        <ProgressBar
            android:id="@+id/config_progress"
            android:layout_width="@dimen/config_progress_size"
            android:layout_height="@dimen/config_progress_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/config_padding"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>